--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ ul > button {
     text-transform: uppercase;
 } */
 
-.btn:focus, .btn:hover {
+nav .btn:focus, nav .btn:hover {
     -moz-box-shadow:    inset 0px 0px 20px 2px #0000005b;
     -webkit-box-shadow: inset 0px 0px 20px 2px #0000005b;
     box-shadow:         inset 0px 0px 20px 2px #0000005b;
