--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+h1 {
+    color: white;
+    font-size: 56px;
+}
+
+p {
+    font-family: 'Muli', sans-serif;
+    font-size: 20px;
+}
+
 .navbar-toggler {
     border: 2px solid transparent;
 }
@@ -127,6 +137,7 @@ ul li a:hover {
 
 .social {
     color:#62929E;
+    font-size: 3rem;
 }
 
 .footer-copyright {
