--- a/ViewDogs.css
+++ b/ViewDogs.css
@@ -1,3 +1,17 @@
+.row{
+    padding: 45px;
+}
+  
+.d-block {
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+}
+
+.card-text{
+    padding: 30px;
+}
+  
 .container-athena {
     float: left;
     margin-left: 10%;
@@ -8,6 +22,14 @@
     margin-right: 10%;
   
 }
+
+.btn-ask {
+    background-color: #62929E;
+    border-color: #62929E;
+    color: white;
+    float: right;
+    margin-top: 10px;
+  }
 
 .clearfix {
     overflow: auto;
