--- a/Homepage.css
+++ b/Homepage.css
@@ -16,4 +16,148 @@
     background-position: center;
     background-repeat: no-repeat;
     height: 90vh;
+    margin-bottom: 0;
+}
+
+.deck-row {
+    padding-top: 30px;
+}
+
+.deck {
+    height:400px;
+    border-radius: ;
+    margin-bottom: 30px;
+}
+
+.red {
+    background-color: rgba(98, 146, 158, 0.5);
+}
+
+.red:hover, .red:focus {
+    background-color: rgba(98, 146, 158, 1);
+    transition: 0.5s ease-out;
+}
+
+.blue {
+    background-color: rgba(143,182,162, 0.5);
+}
+
+.blue:hover, .blue:focus {
+    background-color: rgba(143,182,162,1);
+    transition: 0.5s ease-out;
+}
+
+.green {
+    background-color: rgba(218,183,133, 0.5);
+}
+
+.green:hover, .green:focus {
+    background-color: rgba(218,183,133,1);
+    transition: 0.5s ease-out;
+}
+
+.yellow {
+    background-color: rgba(213,137,111, 0.5);
+}
+
+.yellow:hover, .yellow:focus {
+    background-color: rgba(213,137,111,1);
+    transition: 0.5s ease-out;
+}
+
+.dog1 {
+    position: absolute;
+    bottom: 10px;
+    left: 20px;
+    height: 430px;
+    z-index: 2;
+    
+}
+
+.dog2 {
+    position: absolute;
+    bottom: 0px;
+    left: -50px;
+    height: 220px;
+    z-index: 2;
+    transform: scaleX(-1);
+}
+
+.dog3 {
+    width: 161px;
+    position: absolute;
+    z-index: 2;
+    bottom: 20px;
+    left: 30px;
+    transform: scaleX(-1);
+}
+
+.dog4 {
+    position: absolute;
+    bottom: 10px;
+    left: 80px;
+    height: 390px;
+    z-index: 2;
+}
+
+
+h2 {
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 2rem;
+    line-height: 1;
+    text-align: center;
+    padding-top: 10px;
+    position: relative;
+    z-index: 30;
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+a.dog:hover {
+    color:white;
+    text-decoration: none;
+}
+
+@media (min-width: 576px;) {
+    .dog1 {
+        position: absolute;
+        bottom: 10px;
+        left: 20px;
+        height: 430px;
+        z-index: 2;
+        
+    }
+    
+    .dog2 {
+        position: absolute;
+        bottom: 0px;
+        left: -50px;
+        height: 220px;
+        z-index: 2;
+        transform: scaleX(-1);
+    }
+    
+    .dog3 {
+        width: 161px;
+        position: absolute;
+        z-index: 2;
+        bottom: 20px;
+        left: 30px;
+        transform: scaleX(-1);
+    }
+    
+    .dog4 {
+        position: absolute;
+        bottom: 10px;
+        left: 80px;
+        height: 390px;
+        z-index: 2;
+    }
+
+    .deck {
+    height:400px;
+    border-radius: ;
+    margin-bottom: 30px;
+}
 }
