--- a/Homepage.css
+++ b/Homepage.css
@@ -17,3 +17,24 @@
     background-repeat: no-repeat;
     height: 90vh;
 }
+.card { 
+    margin: 10px;
+}
+.card-title {
+    font-family: 'Muli';
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.card-text {
+    font-size: 1rem;
+}
+
+.card-body {
+    background-color: 
+}
+
+.card-img-top {
+    width: 286px;
+    height: 250px;
+}
