--- a/Homepage.css
+++ b/Homepage.css
@@ -1,5 +1,6 @@
 .btn-coast0 {
     background-color: #89BCE1;
+    border-color: #89BCE1;
     color: white;
 }
 
@@ -16,8 +17,13 @@
     background-position: center;
     background-repeat: no-repeat;
     height: 90vh;
-
+    position: relative;
+    z-index: 3;
     margin-bottom: 0;
+}
+
+.blurb {
+    box-shadow: inset 0px -5px 5px -5px #0000002c;
 }
 
 .deck-row {
