--- a/ViewDogs.css
+++ b/ViewDogs.css
@@ -1,4 +1,4 @@
-.row{
+.container-fluid .row{
     padding: 45px;
 }
   
@@ -47,12 +47,14 @@
     background-color: transparent;
   }
   
-  div.btn {
+  div.btn-lady {
     font-weight: 400;
     font-size: 1.5rem;
     border-radius: 50px;
     padding-right: 25px;
     padding-left: 25px;
+    cursor: default;
+    display: inline-block;
   }
   
   .btn-lady {
@@ -73,4 +75,78 @@
   
   .carousel-inner {
     height: 300px;
+    /* width:auto; */
+    /*background-size: contain;*/
   }
+
+  .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    width: 100%;
+ }
+  
+  #info {
+      margin-left: 5%;
+      margin-right: 5%;
+      /*align-items: flex-start;*/
+  }
+
+  ul{
+    list-style:none;
+}
+
+  .btn-adopt {
+    background-color: #385F71;
+    border-color: #385F71;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .btn-sponsor {
+    background-color: #546A7B;
+    border-color: #546A7B;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .btn-foster {
+    background-color: #18435A;
+    border-color: #18435A;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+.btn-group-vertical{
+    float: right;
+}
+
+.headercontent{
+    margin-bottom: 3px;
+    margin-top: -10px;
+}
+
+
+#button-ask {
+    clear: both;
+    margin-right: 10%;
+}
+
+#about-me {
+    width: 40%;
+}
+
+#about-me ul {
+    padding: 0;
+}
+
+#about-me ul > li {
+    font-size: 1.5em;
+    color: #62929E;
+}
+
+#animal-health {
+    font-size: .9em;
+    color: black;
+}
+
