--- a/form.css
+++ b/form.css
@@ -12,3 +12,10 @@
     margin-right: 100px;
     margin-top: 15px;
 }
+
+.btn-next{
+    background-color: #62929E;
+    border-color:#62929E;
+    color: white;
+    float: right;
+}
