--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ ul li a:hover {
 }
 
 .blurb {
-    background-image: url(../images/vintage-concrete.png);
+    background-image: url(images/vintage-concrete.png);
     background-attachment: fixed;
 }
 
