--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ nav .btn:focus, nav .btn:hover {
 
 h5 {
     color: #62929E;
-    font-family: 'Muli';
+    font-family: 'Do Hyeon', sans-serif;
     font-size: 1.25rem;
 }
 
