--- a/Confirmation.css
+++ b/Confirmation.css
@@ -1,1 +1,24 @@
+.card { 
+    margin: 15px;
+    margin-bottom:30px;
+    border-radius: 25px;
+}
+.card-title {
+    font-family: 'Muli';
+    font-size: 1.5rem;
+    font-weight: bold;
+}
 
+.card-text {
+    font-size: 1rem;
+}
+
+.Featured {
+    padding: 50px;
+}
+
+.card-img-top {
+    width: 286px;
+    height: 250px;
+    border-radius: 25px 25px 0 0;
+ }
